--- a/Fb-Gmail Client/Base.lproj/Main.storyboard
+++ b/Fb-Gmail Client/Base.lproj/Main.storyboard
@@ -156,7 +156,21 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yYL-Gr-scU"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Invite Friends" id="qp8-4f-YTM"/>
+                    <navigationItem key="navigationItem" title="Invite Friends" id="qp8-4f-YTM">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="mdQ-kB-25e">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pEU-is-UK5">
+                                <rect key="frame" x="313" y="7" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Invite"/>
+                                <connections>
+                                    <action selector="invitePressed:" destination="nff-p5-wXx" eventType="touchUpInside" id="AW8-W7-GBz"/>
+                                </connections>
+                            </button>
+                            <connections>
+                                <action selector="invitePressed:" destination="nff-p5-wXx" id="NMF-r1-6fu"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="YgA-RV-ive" id="CfI-On-p8q"/>
                     </connections>
